k8s/apps/demos/solar-system/overlays/us103-k3s01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
spec:
  ingressClassName: nginx
  rules:
  - host: solar.us103k3s01.infutable.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system-service
            port:
              number: 80
